--- a/src/locales/common/nl.json
+++ b/src/locales/common/nl.json
@@ -128,6 +128,7 @@
 			"delete-bookmark": "Verwijder bladwijzer",
 			"increase-time-by-n-s": "Tijd verhogen met {n}s",
 			"load-bookmark": "Open bladwijzer {id}",
+			"percent-solved": "{percentFormatted} opgelost",
 			"set-bookmark": "Maak bladwijzer",
 			"solve-all-triples": "Los alle 'Triples' op",
 			"solve-instantly": "Direct oplossen",
