--- a/src/locales/common/nl.json
+++ b/src/locales/common/nl.json
@@ -128,11 +128,14 @@
 			"delete-bookmark": "Verwijder bladwijzer",
 			"increase-time-by-n-s": "Tijd verhogen met {n}s",
 			"load-bookmark": "Open bladwijzer {id}",
+			"load-last-bookmark": "Laad laaste bladwijzer",
+			"no-bookmark-saved": "Geen bladwijzers opgeslagen",
 			"percent-solved": "{percentFormatted} opgelost",
 			"set-bookmark": "Maak bladwijzer",
 			"solve-all-triples": "Los alle 'Triples' op",
 			"solve-instantly": "Direct oplossen",
-			"solve-puzzle": "Puzzel oplossen"
+			"solve-puzzle": "Puzzel oplossen",
+			"view-bookmarks": "Bekijk bladwijzers"
 		},
 		"paused": "Gepauzeerd",
 		"progress-percentage": "Voortgang:{p}%"
