--- a/src/locales/common/nl.json
+++ b/src/locales/common/nl.json
@@ -128,8 +128,9 @@
 			"delete-bookmark": "Verwijder bladwijzer",
 			"increase-time-by-n-s": "Tijd verhogen met {n}s",
 			"load-bookmark": "Open bladwijzer {id}",
-			"load-last-bookmark": "Laad laaste bladwijzer",
+			"load-last-bookmark": "Laad laatste bladwijzer",
 			"no-bookmark-saved": "Geen bladwijzers opgeslagen",
+			"bookmark-n": "Bladwijzer {n}",
 			"percent-solved": "{percentFormatted} opgelost",
 			"set-bookmark": "Maak bladwijzer",
 			"solve-all-triples": "Los alle 'Triples' op",
