Load last correct state bookmark in debug dropdown

--- a/src/locales/common/en.json
+++ b/src/locales/common/en.json
@@ -127,10 +127,11 @@
 			"bookmark-saved": "Bookmark saved",
 			"copy-board-string": "Copy board string",
 			"increase-time-by-n-s": "Increase time by {n}s",
+			"load-last-correct-board-state": "Revert to correct board",
 			"load-previous-bookmark": "Load previous bookmark",
-			"previous-bookmark-is-current": "Matches current progress",
 			"no-bookmark-saved": "No bookmarks saved",
 			"percent-solved": "{percentFormatted} solved",
+			"previous-bookmark-is-current": "Matches current progress",
 			"set-bookmark": "Set bookmark",
 			"solve-all-triples": "Solve all triples",
 			"solve-instantly": "Solve instantly",
