--- a/src/locales/common/nl.json
+++ b/src/locales/common/nl.json
@@ -127,6 +127,7 @@
 			"bookmark-saved": "Bladwijzer opgeslagen",
 			"copy-board-string": "Kopieer puzzel 'BoardString'",
 			"increase-time-by-n-s": "Tijd verhogen met {n}s",
+			"load-last-correct-board-state": "Draai terug naar correct bord",
 			"load-previous-bookmark": "Laad vorige bladwijzer",
 			"no-bookmark-saved": "Geen bladwijzers opgeslagen",
 			"percent-solved": "{percentFormatted} opgelost",
