--- a/src/locales/common/nl.json
+++ b/src/locales/common/nl.json
@@ -97,7 +97,8 @@
 		},
 		"tab-advanced-techniques": "Geavanceerde Technieken",
 		"tab-basic-techniques": "Basis Technieken",
-		"tab-overview": "Overzicht en Regels",
+		"tab-overview": "Overzicht",
+		"tab-rules": "Regels",
 		"title": "Spelhulp"
 	},
 	"NewPuzzle": {
