Update BasicTechniques component

--- a/src/locales/how-to-play/en.json
+++ b/src/locales/how-to-play/en.json
@@ -43,32 +43,6 @@
 				"title": "Unique Rows and Columns"
 			}
 		},
-		"BasicTechniques": {
-			"description": "Below, we've outlined some fundamental strategies to help you navigate through the puzzles with ease.",
-			"line-completion": {
-				"description": "This technique stems from the \"balanced lines\" rule, which stipulates that each row and column must contain an equal number of {symbolZeroPlural} and {symbolOnePlural}. As you fill in the puzzle, keep track of the balance within each row and column to guide your placement decisions.",
-				"example": "This row has 6 cells, which means there are 3 of each {symbolOrColor} required. As you can see in the top row, there are 3 {symbolOnePlural}, which means all other cells should be {symbolZeroPlural}.",
-				"tip": "A setting is available that adds a horizontal and vertical ruler to the puzzle grid. These rulers display how many of each {symbolOrColor} still need to be placed in that row or column, and highlight whenever a line has none remaining of a single {symbolOrColor}, which means it can be completed with the other {symbolOrColor}.",
-				"title": "Completing Rows and Columns"
-			},
-			"pairs-and-sandwiches": {
-				"description": "A direct application of the \"max two consecutive\" rule is to avoid forming triplets within the puzzle grid.",
-				"pairs": "Pairs",
-				"pairs-description": "Whenever you observe two identical {symbolOrColorPlural} next to each other, either horizontally or vertically, this forms a \"pair.\" The cells immediately adjacent to this pair must be filled with the other {symbolOrColor} to prevent creating a sequence of three identical {symbolOrColorPlural} (a triplet).",
-				"sandwiches": "Sandwiches",
-				"sandwiches-description": "A \"sandwich\" occurs when an empty cell is flanked by two identical {symbolOrColorPlural}. This setup mandates that the empty cell, effectively the \"filling\" of the sandwich, be filled with the other {symbolOrColor} to avoid the formation of triplets.",
-				"title": "Identifying Pairs and Sandwiches"
-			},
-			"unique-lines": {
-				"description": "This strategy is often not a necessity for solving puzzles, especially at easier difficulties, thanks to the tailored puzzle generation algorithm. Its utility shines on smaller boards or during tougher challenges where other strategies might leave you in a standstill.",
-				"example-label": "Consider this 4x4 puzzle. Two rows are already completed, and the first row looks similar to the second row:",
-				"example-label-2": "It can only be filled in one way to prevent two duplicate rows:",
-				"title": "Unique Rows and Columns",
-				"when-to-use-label": "When to use:",
-				"when-to-use-text": "It's especially helpful in scenarios where a line is almost complete yet cannot be completed using the basic rules of balancing, sandwiches, or pairs. If you're leveraging the rulers setting that indicates the remaining number of each {symbolOrColor} needed in a row or column, pay close attention to lines that require the placement of exactly one {symbolOne} and one {symbolZero}. Compare these scenarios with existing lines to identify the correct placements."
-			},
-			"a-becomes-b": "Becomes:"
-		},
 		"LabelCorrect": "Correct: ",
 		"LabelIncorrect": "Incorrect: ",
 		"Variations": {
@@ -80,6 +54,28 @@
 			},
 			"description": "In addition to standard puzzles, there is one puzzle variation available:",
 			"title": "Puzzle Variations"
+		},
+		"BasicTechniques": {
+			"Becomes:": "Becomes:",
+			"identify-pairs": {
+				"description": "If two identical {symbolOrColorPlural} are next to each other, we call this a 'pair'. Since each {symbolOrColor} may appear a maximum of two times next to or below each other, the adjacent cells can be filled in with the opposite {symbolOrColor}.",
+				"name": "Identify pairs"
+			},
+			"identify-sandwiches": {
+				"name": "Identify sandwiches",
+				"description": "An empty cell between two identical {symbolOrColorPlural} forms a 'sandwich'. This empty cell must contain the other {symbolOrColor} to prevent three of the same {symbolOrColorPlural} from lining up."
+			},
+			"fill-lines": {
+				"name": "Complete rows and columns",
+				"description": "Each row and column must contain an equal number of each {symbolOrColor}. If a row or column already has the maximum number of one {symbolOrColor}, then the remaining empty cells must become the other {symbolOrColor}.",
+				"example": "This row has 6 cells, which means there are 3 of each {symbolOrColor} required. As you can see in the top row, there are 3 {symbolOnePlural}, which means all other cells should be {symbolZeroPlural}."
+			},
+			"prevent-duplicate-lines": {
+				"name": "Prevent duplicate rows and columns",
+				"description": "Each row and column must be unique. \nFor example, you can use this technique if you already have a completely filled in row or column, and there is another row or column that is almost the same. \nMissing cells can sometimes only be filled in one way without the two rows or columns becoming the same.",
+				"example-label": "Consider this 4x4 puzzle. Two rows are already completed, and the first row looks similar to the second row:",
+				"example-label-2": "It can only be filled in one way to prevent two duplicate rows:"
+			}
 		}
 	}
 }
